--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/uberollcake.html">Ube Roll Cake</a></li>
+        <li><a href="recipes/pilk.html">Pilk</a></li>
+        <li><a href="recipes/tofu.html">Tofu</a></li>
+
+    </ul>
 </body>
 </html>
