Add description, ingredients and steps to Ube Roll

--- a/recipes/pilk.html
+++ b/recipes/pilk.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Pilk</h1>
+    <img src="https://i.kym-cdn.com/photos/images/facebook/002/205/964/6da.jpg">
 </body>
 </html>
