--- a/recipes/tofu.html
+++ b/recipes/tofu.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Tofu</h1>
+    <img src="https://pbs.twimg.com/media/E9uoz2qVoAkLPZ7?format=jpg&name=large">
 </body>
 </html>
