Add description, ingredients and steps to tofu

--- a/recipes/tofu.html
+++ b/recipes/tofu.html
@@ -9,5 +9,24 @@
 <body>
     <h1>Tofu</h1>
     <img src="https://pbs.twimg.com/media/E9uoz2qVoAkLPZ7?format=jpg&name=large">
+    <h2>Description</h2>
+    <p>Tofu is a strange food that is made of soybeans. I have never actually seen
+        soybeans before. My brother is vegan so I've seen soy plenty of times and
+        let me tell ya, those bags of soy from costco <br>do not look like they contain
+        anything resembling beans. Tofu can be prepared in many
+        different ways which can alter the flavor and texture. The variety of tofu
+        recipes out there make this one <br>of the most versatile foods you can prepare.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Soybeans</li>
+        <li>Other stuff</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Idk how tofu is made so step one is buy tofu</li>
+        <li>Prepare it however you like!</li>
+        <li>Enjoy~ :)</li>
+    </ol>
 </body>
 </html>
