Add description, ingredients and steps to pilk

--- a/recipes/pilk.html
+++ b/recipes/pilk.html
@@ -9,5 +9,22 @@
 <body>
     <h1>Pilk</h1>
     <img src="https://i.kym-cdn.com/photos/images/facebook/002/205/964/6da.jpg">
+    <h2>Description</h2>
+    <p>Pilk can come in many varieties. The type that I will be covering is the 
+        pickle version. Pilk (pickles and milk)<br> consists of simple, honest ingredients.
+        There are slight differences in how it can be prepared. Some people <br>prefer to 
+        eat chunks of pickle in a bowl as if it were cereal. Other people (such as myself)
+        drink milk mixed <br> with pickle juice.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Pickles</li>
+        <li>Milk</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Pour yourself a cold glass of milk</li>
+        <li>Commit atrocities</li>
+    </ol>
 </body>
 </html>
